# coprbrnch

./: CHANGELOG.md  Main.hs  Makefile  README.md  cabal.project  cobrnch.cabal  coprbrnch.cabal  stack-lts11.yaml  stack-lts12.yaml  stack-lts13.yaml  stack-lts14.yaml  stack.yaml
app/: Main.hs
src/: Common.hs  Coprbrnch.hs
