cabal-version:       1.24
name:                cobrnch
version:             0.1
synopsis:            Copr branch build tool
description:         Copr branch build tool
homepage:            https://github.com/juhp/cobrnch
bug-reports:         https://github.com/juhp/cobrnch/issues
license:             GPL-3.0-only
license-file:        LICENSE
author:              Jens Petersen
maintainer:          Jens Petersen <petersen@redhat.com>
copyright:           2020 Jens Petersen
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/juhp/coprbrnch.git

executable cobrnch
  hs-source-dirs:      . src
  main-is:             Main.hs
  other-modules:       Common
                       Common.System
                       Common.Text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

  build-depends:       base < 5
                     , config-ini
                     , copr
                     , directory
                     , fedora-dists
                     , filepath
                     , microlens
                     , microlens-aeson
                     , optparse-applicative
                     , simple-cmd
                     , simple-cmd-args >= 0.1.6
                     , text
                     , unordered-containers
                     , xdg-basedir

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
